Mensaje describiendo los cambios

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -51,7 +51,7 @@
   </body>
   
   <section class="section__container booking__container">
-    <form action="habitaciones.html" method="GET" class="booking__form">
+    <form action="habitaciones.html" class="booking__form">
       <div class="input__group">
         <span><i class="ri-calendar-2-fill"></i></span>
         <div>
