Mensaje describiendo los cambios

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -74,8 +74,14 @@
           <input type="number" name="rooms" id="rooms" min="1" max="5" value="1" required />
         </div>
       </div>
-      <!-- Contenedor para las cantidades de pasajeros -->
-      <div id="passenger-container"></div>
+      <!-- Cantidad de Pasajeros -->
+      <div class="input__group">
+        <span><i class="ri-user-fill"></i></span>
+        <div>
+          <label for="people">PASAJEROS</label>
+          <input type="number" name="people" id="people" min="1" max="4" value="1" required />
+        </div>
+      </div>
       <div class="input__group input__btn">
         <button type="submit" class="btn">BUSCAR</button>
       </div>
