--- a/Frontend/habitaciones.html
+++ b/Frontend/habitaciones.html
@@ -42,8 +42,8 @@
         }
 
         // Validar que roomCount sea un número positivo
-        if (isNaN(peopleCount) || roomCount <= 0) {
-            roomCount = 0;
+        if (isNaN(peopleCount) || peopleCount <= 0) {
+          peopleCount = 0;
         }
       
         // Mostrar roomCount y guestCounts en la página
