Mensaje describiendo los cambios

--- a/Frontend/html/admin.html
+++ b/Frontend/html/admin.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="admin.css">
-    <script src="habitacionesService.js"></script>
-    <script src="clientesService.js"></script>
-    <script src="reservasService.js"></script>
+    <link rel="stylesheet" href="/Frontend/css/admin.css">
+    <script src="/Frontend/js/habitacionesService.js"></script>
+    <script src="/Frontend/js/clientesService.js"></script>
+    <script src="/Frontend/js/reservasService.js"></script>
     <title>Admin Hotel Glade</title>
 </head>
 
@@ -137,7 +137,7 @@
             </section>
         </main>
 
-    <script src="admin.js"></script>
+    <script src="/Frontend/js/admin.js"></script>
 
 </body>
 
