--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Hotel Glade</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/Frontend/css/login.css" />
   </head>
   <body>
     <main>
@@ -73,6 +73,6 @@
         </div>
       </div>
     </main>
-    <script src="login.js"></script>
+    <script src="/Frontend/js/login.js"></script>
   </body>
 </html>
