--- a/Frontend/html/habitaciones.html
+++ b/Frontend/html/habitaciones.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="habitaciones.css" />
-  <script src="habitacionesService.js" defer></script>
+  <link rel="stylesheet" href="/Frontend/css/habitaciones.css" />
+  <script src="/Frontend/js/habitacionesService.js" defer></script>
   <title>Habitaciones Hotel Glade</title>
 </head>
 <body>
@@ -58,5 +58,5 @@
   </section>
 
 </body>
-<script src="habitaciones.js" defer></script>
+<script src="/Frontend/js/habitaciones.js" defer></script>
 </html>
