--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/Frontend/css/styles.css" />
     <title>Hotel Glade</title>
   </head>
   <body>
@@ -246,6 +246,6 @@
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="index.js"></script>
+    <script src="/Frontend/js/index.js"></script>
   </body>
 </html>
