Mensaje describiendo los cambios

--- a/Frontend/html/admin.html
+++ b/Frontend/html/admin.html
@@ -17,7 +17,7 @@
     <div id="loading">Cargando...</div> <!-- Mensaje de carga -->
     <!-- Sidebar -->
     <div class="sidebar">
-        <a href="index.html" class="logo">
+        <a href="/Frontend/html/index.html" class="logo">
             <i class='bx bxs-hotel' style='color:#112a49' ></i>
             <div class="logo-name"><span>Glade</span></div>
         </a>
@@ -49,7 +49,7 @@
                 <span class="count">12</span>
             </a>
             <a href="#" class="profile">
-                <img src="assets/perfil.jpg">
+                <img src="/Frontend/assets/perfil.jpg">
             </a>
         </nav>
 
