--- a/Frontend/html/habitaciones.html
+++ b/Frontend/html/habitaciones.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="nav__bar">
         <div class="logo">
-          <a href="index.html"><img src="assets/logo.png" alt="logo" /></a>
+          <a href="/Frontend/html/index.html"><img src="/Frontend/assets/logo.png" alt="logo" /></a>
         </div>
       </div>
     </nav>
