--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -12,10 +12,10 @@
       <div class="box">
         <div class="inner-box">
           <div class="forms-wrap">
-            <form action="login.html" autocomplete="off" class="sign-in-form">
+            <form action="/Frontend/html/login.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <a href="index.html">
-                  <img src="./assets/logo2.png" alt="easyclass" />
+                <a href="/Frontend/html/index.html">
+                  <img src="/Frontend/assets/logo2.png" alt="easyclass" />
               </a>
                 <h3>Glade</h3>
               </div>
@@ -51,9 +51,9 @@
           </div>
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="./assets/hotel.jpg" class="image img-1 show" alt="" />
-              <img src="./assets/bedroom.jpg" class="image img-2" alt="" />
-              <img src="./assets/reception.jpg" class="image img-3" alt="" />
+              <img src="/Frontend/assets/hotel.jpg" class="image img-1 show" alt="" />
+              <img src="/Frontend/assets/bedroom.jpg" class="image img-2" alt="" />
+              <img src="/Frontend/assets/reception.jpg" class="image img-3" alt="" />
             </div>
             <div class="text-slider">
               <div class="text-wrap">
